# CMakeHelloWorld

./: .gitignore  CMakeLists.txt  HelloWorldConfig.h.in  README.md
ExampleLib/: CMakeLists.txt  LibraryFile.cpp  LibraryFile.h  README.md
Source/: main.cpp
